--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -19,4 +19,6 @@ SAVE_VOTE=INSERT INTO VOTOS (idOpcion,idColElect,totVotos) VALUES (?,?,?)
 UPDATE_VOTE=UPDATE VOTOS SET totVotos = ?, status = ? where idOpcion = ? and idColElect = ? 
 FIND_VOTE=select totVotos from VOTOS where  where idOpcion = ? and idColElect = ?
 
+FIND_CIRC=select * from CIRCUNSCRIPCIONES where  where id = ?
+
 
