arreglo algunos test

--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -20,21 +20,21 @@ UPDATE_VOTE=UPDATE VOTOS SET totVotos = ?, status = ? where idOpcion = ? and idC
 FIND_VOTE=select totVotos from VOTOS where  where idOpcion = ? and idColElect = ?
 
 SAVE_CIRC=INSERT INTO CIRCUNSCRIPCIONES (Nombre) VALUES (?)
-FIND_CIRC=select * from CIRCUNSCRIPCIONES where  where id = ?
+FIND_CIRC=select * from CIRCUNSCRIPCIONES  where id = ?
 
-SAVE_COL=INSERT INTO COLELECTORAL(ICODCINCURSCRIPCION,CODCOMAUTONOMA,VOTOSFISICOS) VALUES (?,?,?)
-FIND_COL=select * from COLELECTORAL where  where id = ?
+SAVE_COL=INSERT INTO COLELECTORAL(CODCINCURSCRIPCION,CODCOMAUTONOMA,VOTOSFISICOS) VALUES (?,?,?)
+FIND_COL=select * from COLELECTORAL  where id = ?
 UPDATE_COL=UPDATE COLELECTORAL SET VOTOSFISICOS = ?
 
 SAVE_COM=INSERT INTO COMUNIDADESAUTONOMAS (Nombre) VALUES (?)
-FIND_COM=select * from COMUNIDADESAUTONOMAS where  where id = ?
+FIND_COM=select * from COMUNIDADESAUTONOMAS where id = ?
 
-FIND_OPCION=select * from OPCIONES where  where id = ?
+FIND_OPCION=select * from OPCIONES  where id = ?
 SAVE_OPCION=INSERT INTO OPCIONES (CODVOTACION,DEFINICION) VALUES (?,?)
 FIND_OPCIONES_VOTACION=select * from OPCIONES where  where CODVOTACION = ?
 
-FIND_VOTACION=select * from VOTACIONES where  where id = ?
+FIND_VOTACION=select * from VOTACIONES  where id = ?
 SAVE_VOTACION=INSERT INTO VOTACIONES (DEFINICION) VALUES (?)
 
 SAVE_VOTADO=INSERT INTO HANVOTADO (IDVOTANTE,CODVOTACION) VALUES (?,?)
-FIND_VOTADO=select * from VOTACIONES where  where IDVOTANTE = ? and CODVOTACION=?
+FIND_VOTADO=select * from VOTACIONES  where IDVOTANTE = ? and CODVOTACION=?
