Arreglados mas fallos en la BD, más test

--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -32,7 +32,7 @@ FIND_CIRC=select * from CIRCUNSCRIPCIONES  where id = ?
 
 SAVE_COL=INSERT INTO COLELECTORAL(CODCINCURSCRIPCION,CODCOMAUTONOMA,VOTOSFISICOS) VALUES (?,?,?)
 FIND_COL=select * from COLELECTORAL  where id = ?
-UPDATE_COL=UPDATE COLELECTORAL SET VOTOSFISICOS = ?
+UPDATE_COL=UPDATE COLELECTORAL SET VOTOSFISICOS = ? where id= ?
 
 SAVE_COM=INSERT INTO COMUNIDADESAUTONOMAS (Nombre) VALUES (?)
 FIND_COM=select * from COMUNIDADESAUTONOMAS where id = ?
