Corrección de errores y mas pruebas hechas

--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -40,6 +40,7 @@ FIND_COM=select * from COMUNIDADESAUTONOMAS where id = ?
 FIND_OPCION=select * from OPCIONES where id = ?
 SAVE_OPCION=INSERT INTO OPCIONES (CODVOTACION,DEFINICION) VALUES (?,?)
 FIND_OPCIONES_VOTACION=select * from OPCIONES where CODVOTACION = ?
+EXISTE_OPCION= select * from OPCIONES where CODVOTACION = ? and DEFINICION = ? 
 
 FIND_VOTACION=select * from VOTACIONES where id = ?
 SAVE_VOTACION=INSERT INTO VOTACIONES (DEFINICION) VALUES (?)
