--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -33,6 +33,7 @@ FIND_CIRC=select * from CIRCUNSCRIPCIONES  where id = ?
 SAVE_COL=INSERT INTO COLELECTORAL(CODCINCURSCRIPCION,CODCOMAUTONOMA,VOTOSFISICOS) VALUES (?,?,?)
 FIND_COL=select * from COLELECTORAL  where id = ?
 UPDATE_COL=UPDATE COLELECTORAL SET VOTOSFISICOS = ? where id= ?
+EXISTE_COL= select * from COLELECTORAL where CODCINCURSCRIPCION = ? and CODCOMAUTONOMA = ?
 
 SAVE_COM=INSERT INTO COMUNIDADESAUTONOMAS (Nombre) VALUES (?)
 FIND_COM=select * from COMUNIDADESAUTONOMAS where id = ?
