Modificacion de persistencia Añadidas consultas necesarias

--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -43,8 +43,10 @@ SAVE_OPCION=INSERT INTO OPCIONES (CODVOTACION,DEFINICION) VALUES (?,?)
 FIND_OPCIONES_VOTACION=select * from OPCIONES where CODVOTACION = ?
 EXISTE_OPCION= select * from OPCIONES where CODVOTACION = ? and DEFINICION = ? 
 
+
 FIND_VOTACION=select * from VOTACIONES where id = ?
 SAVE_VOTACION=INSERT INTO VOTACIONES (DEFINICION) VALUES (?)
+FIND_TODAS_VOTACIONES = select * from VOTACIONES
 
 SAVE_VOTADO=INSERT INTO HANVOTADO (IDVOTANTE,CODVOTACION) VALUES (?,?)
 FIND_VOTADO=select * from HANVOTADO  where IDVOTANTE = ? and CODVOTACION=?
