Mas test y añadido FindByID

--- a/src/main/java/sql.properties
+++ b/src/main/java/sql.properties
@@ -20,6 +20,7 @@ SAVE_SQL=INSERT INTO Votantes (Login,Nombre,Email,NIF,CodColegio,Password,VOTOEL
 RESET_ID=ALTER TABLE Votantes ALTER COLUMN 'ID' RESTART WITH 1
 DELETE_ALL = delete from Votantes
 FIND_USER=select * from Votantes where nif = ?
+FIND_USER_BY_ID=select * from Votantes where id = ?
 FIND_ALL_USERS=select * from Votantes
 DELETE_USER=delete from Votantes where nif=?
 
